# p2p_file_sharing

./: .gitignore  Cargo.toml  README.MD  README.md  rustfmt.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: helpers.rs  lib.rs
crates/core/src/entities/: action.rs  file_info.rs  file_size.rs  file_size_or_info.rs  file_state.rs  mod.rs  response.rs  transfer_guard.rs
crates/core/src/utils/: create_buffer.rs  logger.rs  mod.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  main.rs  multicast.rs  utils.rs
crates/daemon/src/entities/: block_info.rs  file_info.rs  file_size_or_info.rs  file_state.rs  handshake.rs  mod.rs  transfer_guard.rs
crates/utils/: Cargo.toml
crates/utils/src/: logger.rs
src/: client.rs  daemon.rs  lib.rs  my_stuff.rs
