[package]
name = "p2p-daemon"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
p2p-core = { path = "../core" }
p2p-config = { path = "../config" }
p2p-utils = { path = "../utils" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
rand = { workspace = true }
